force-app/main/default/objects/Opportunity__c/fields/Sales_Last_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Last_Call_Date__c</fullName>
    <label>Sales Last Call Date</label>
    <type>DateTime</type>
</CustomField>