force-app/main/default/objects/Opportunity__c/fields/Sales_Last_Comment__c.field-meta.xml
<CustomField>
    <fullName>Sales_Last_Comment__c</fullName>
    <label>Sales Last Comment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>