force-app/main/default/objects/Opportunity__c/fields/Sales_Next_Follow_up_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Next_Follow_Up_Date__c</fullName>
    <label>Sales Next Follow-Up Date</label>
    <type>DateTime</type>
</CustomField>