force-app/main/default/objects/Opportunity__c/fields/Sales_Proposed_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Proposed_Visit_Date__c</fullName>
    <label>Sales  Proposed Visit Date</label>
    <type>DateTime</type>
</CustomField>