force-app/main/default/objects/Opportunity__c/fields/Sales_TL__c.field-meta.xml
<CustomField>
    <fullName>Sales_TL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales TL</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities6</relationshipName>
    <type>Lookup</type>
</CustomField>