force-app/main/default/objects/Opportunity__c/fields/Sales_TL_Incentives__c.field-meta.xml
<CustomField>
    <fullName>Sales_TL_Incentives__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Sales TL Incentives</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>