force-app/main/default/objects/Opportunity__c/fields/SalesManager__c.field-meta.xml
<CustomField>
    <fullName>SalesManager__c</fullName>
    <formula>Sales_Manager__r.FirstName &amp; &quot; &quot; &amp; Sales_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SalesManager</label>
    <type>Text</type>
</CustomField>