force-app/main/default/objects/Opportunity__c/fields/Site_Head_Incentives__c.field-meta.xml
<CustomField>
    <fullName>Site_Head_Incentives__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Site Head Incentives</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>