force-app/main/default/objects/Opportunity__c/fields/Site_Visit_Count__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Count__c</fullName>
    <label>Site Visit Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>