force-app/main/default/objects/Opportunity__c/fields/Source_of_OCR__c.field-meta.xml
<CustomField>
    <fullName>Source_of_OCR__c</fullName>
    <label>Source of OCR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>