force-app/main/default/objects/Opportunity__c/fields/Sourcing_Manager_Incentives__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_Manager_Incentives__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Sourcing Manager Incentives</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>