force-app/main/default/objects/Opportunity__c/fields/Sourcing_Managers__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_Managers__c</fullName>
    <label>Sourcing Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Snehal Jadhav</fullName>
            </value>
            <value>
                <fullName>Mitesh Patil</fullName>
            </value>
            <value>
                <fullName>Antariksh Kumawat</fullName>
            </value>
            <value>
                <fullName>Rahul</fullName>
            </value>
            <value>
                <fullName>Riya Khanvilkar</fullName>
            </value>
            <value>
                <fullName>Umaid Shiakh</fullName>
            </value>
            <value>
                <fullName>Priyanshu Pandey</fullName>
            </value>
            <value>
                <fullName>Ratan Swami</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>