force-app/main/default/objects/Opportunity__c/fields/SourcingManager__c.field-meta.xml
<CustomField>
    <fullName>SourcingManager__c</fullName>
    <formula>Sourcing_Manager__r.FirstName &amp; &quot; &quot; &amp; Sourcing_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SourcingManager</label>
    <type>Text</type>
</CustomField>