force-app/main/default/objects/Opportunity__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>In Follow-up</fullName>
                <default>true</default>
                <label>In Follow-up</label>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Booking In-Process</fullName>
            </value>
            <value>
                <fullName>Booking Cancelled</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>