force-app/main/default/objects/Opportunity__c/fields/Stage_Booking__c.field-meta.xml
<CustomField>
    <fullName>Stage_Booking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stage Booking</label>
    <type>Checkbox</type>
</CustomField>