force-app/main/default/objects/Opportunity__c/fields/Sub_Source_Details__c.field-meta.xml
<CustomField>
    <fullName>Sub_Source_Details__c</fullName>
    <label>Sub-Source Details</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Source__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Sub_Source_Details</valueSetName>
    </valueSet>
</CustomField>