force-app/main/default/objects/Opportunity__c/fields/SV_Comment_History__c.field-meta.xml
<CustomField>
    <fullName>SV_Comment_History__c</fullName>
    <label>SV Comment History</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>