force-app/main/default/objects/Opportunity__c/fields/SV_Count__c.field-meta.xml
<CustomField>
    <fullName>SV_Count__c</fullName>
    <label>SV Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>