force-app/main/default/objects/Opportunity__c/fields/SV_Date_History__c.field-meta.xml
<CustomField>
    <fullName>SV_Date_History__c</fullName>
    <label>SV Date History</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>