force-app/main/default/objects/Opportunity__c/fields/Type_of_Pre_existing_Loan__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Pre_existing_Loan__c</fullName>
    <label>Type of Pre-existing Loan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home Loan</fullName>
            </value>
            <value>
                <fullName>Car Loan</fullName>
            </value>
            <value>
                <fullName>Personal Loan</fullName>
            </value>
            <value>
                <fullName>Loan Against Property</fullName>
            </value>
            <value>
                <fullName>Business Loan</fullName>
            </value>
            <value>
                <fullName>More than 2 months</fullName>
                <isActive>false</isActive>
                <label>More than 2 months</label>
            </value>
            <value>
                <fullName>Within 15 days</fullName>
                <isActive>false</isActive>
                <label>Within 15 days</label>
            </value>
            <value>
                <fullName>Within 2 months</fullName>
                <isActive>false</isActive>
                <label>Within 2 months</label>
            </value>
            <value>
                <fullName>Within 30 days</fullName>
                <isActive>false</isActive>
                <label>Within 30 days</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>