force-app/main/default/objects/Opportunity__c/fields/Walkin_Referrer_Details__c.field-meta.xml
<CustomField>
    <fullName>Walkin_Referrer_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Walkin Referrer Details</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Person Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Walkin Referrer Details)</relationshipLabel>
    <relationshipName>Opportunities5</relationshipName>
    <type>Lookup</type>
</CustomField>