force-app/main/default/objects/Opportunity__c/fields/Walkin_Referrer_Name__c.field-meta.xml
<CustomField>
    <fullName>Walkin_Referrer_Name__c</fullName>
    <label>Walkin Referrer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>