force-app/main/default/objects/Opportunity__c/validationRules/CP_and_CP_Project_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>CP_and_CP_Project_Mandatory</fullName>
    <active>false</active>
    <description>If source is Channel Partner then CP and CP Project Should not Mandatory.</description>
    <errorConditionFormula>AND(OR(ISBLANK( CP_Project__c ),ISBLANK( Channel_Partner__c)), ISPICKVAL(Lead_Source__c , &apos;Channel Partner&apos; ))</errorConditionFormula>
    <errorMessage>Please add Channel Partner and CP Project.</errorMessage>
</ValidationRule>