force-app/main/default/objects/Opportunity__c/validationRules/Opp_Project_and_CP_Project_Same.validationRule-meta.xml
<ValidationRule>
    <fullName>Opp_Project_and_CP_Project_Same</fullName>
    <active>false</active>
    <description>Opportunity Project and CP Project Should be same</description>
    <errorConditionFormula>AND(Project__c &lt;&gt; CP_Project__r.Project__c, ISPICKVAL( Lead_Source__c , &apos;Channel Partner&apos;) )</errorConditionFormula>
    <errorMessage>Opportunity Project and CP Project should be same.</errorMessage>
</ValidationRule>