force-app/main/default/objects/Opportunity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Project__c</columns>
    <columns>Walkin_Source__c</columns>
    <columns>Opportunity_Stage__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Closing_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>