force-app/main/default/objects/Opportunity__c/listViews/Booked_Opportunites.listView-meta.xml
<ListView>
    <fullName>Booked_Opportunites</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Project__c</columns>
    <columns>Walkin_Source__c</columns>
    <columns>Opportunity_Stage__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Closing_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity_Stage__c</field>
        <operation>equals</operation>
        <value>Booked</value>
    </filters>
    <label>Booked Opportunites</label>
</ListView>