force-app/main/default/objects/Opportunity__c/listViews/Expected_Revisits.listView-meta.xml
<ListView>
    <fullName>Expected_Revisits</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Is_Serviced__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Project__c</columns>
    <columns>Source__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Proposed_Visit_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Expected Revisits</label>
</ListView>