force-app/main/default/objects/Opportunity__c/listViews/In_follow_up_Opportunities.listView-meta.xml
<ListView>
    <fullName>In_follow_up_Opportunities</fullName>
    <columns>NAME</columns>
    <columns>Is_Active__c</columns>
    <columns>Opportunity_Stage__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Opportunity_Stage__c</field>
        <operation>equals</operation>
        <value>In Follow-up</value>
    </filters>
    <label>In follow-up Opportunities</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>