force-app/main/default/objects/Opportunity__c/listViews/Missed_Follow_up_Opportunities.listView-meta.xml
<ListView>
    <fullName>Missed_Follow_up_Opportunities</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Sales_Next_Follow_Up_Date__c</columns>
    <columns>Stage__c</columns>
    <columns>Sales_Proposed_Visit_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Sales_Next_Follow_Up_Date__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Missed Follow-up Opportunities</label>
</ListView>