force-app/main/default/objects/Opportunity__c/listViews/Missed_Opportunities.listView-meta.xml
<ListView>
    <fullName>Missed_Opportunities</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Is_Serviced__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Project__c</columns>
    <columns>Source__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Next_Follow_up_Date__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <label>Missed Follow up Opportunities</label>
</ListView>