force-app/main/default/objects/Opportunity__c/listViews/My_Inactive_Opportunities.listView-meta.xml
<ListView>
    <fullName>My_Inactive_Opportunities</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Sub_Stage__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Inactive Opportunities</label>
</ListView>