force-app/main/default/objects/Opportunity__c/listViews/My_Opportunities.listView-meta.xml
<ListView>
    <fullName>My_Opportunities</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Opportunities_Int</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>