force-app/main/default/objects/Opportunity__c/listViews/My_Opportunities_CP.listView-meta.xml
<ListView>
    <fullName>My_Opportunities_CP</fullName>
    <columns>NAME</columns>
    <columns>Mobile__c</columns>
    <columns>Email__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Opportunity_Stage__c</columns>
    <columns>Project__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Opportunities</label>
</ListView>