force-app/main/default/objects/Opportunity__c/listViews/Sales_Head.listView-meta.xml
<ListView>
    <fullName>Sales_Head</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Opportunity_Id__c</columns>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Stage__c</columns>
    <columns>Sub_Stage__c</columns>
    <columns>Master_Source__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Sales_Next_Follow_up_Date__c</columns>
    <columns>Sales_Proposed_Visit_Date__c</columns>
    <columns>Site_Visit_Count__c</columns>
    <columns>Last_SV_attended_by__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>In Follow-up,Booked,Booking Cancelled</value>
    </filters>
    <label>Sales Head</label>
    <sharedTo>
        <group>Sales_Head_Team</group>
    </sharedTo>
</ListView>